<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="app_name">OpenWeatherApp</string>
    <string name="title_activity_weather">OpenWeatherApp</string>
    <string name="refresh_button">Refresh</string>
    <string name="error_message">Unable to get weather, please try again.</string>

    <!-- - - - - - - -->
    <!-- Notifications -->
    <!-- - - - - - - -->

    <string name="main_notification_channel_name">Primary Notifications</string>
    <string name="notification_weather_sync_title">Syncing weather</string>
    <string name="notification_weather_sync_body">Weather has been updated!</string>

    <!-- - - - - - - -->
    <!-- Preferences -->
    <!-- - - - - - - -->

    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>


    <!-- OpenWeatherKey -->
    <string name="pref_apikey_key" translatable="false">apikey</string>
    <string name="pref_apikey_label" >OpenWeather API Key</string>
    <string name="pref_apikey_default" translatable="false" >78662b4380d2a3b35ca40152aa0588b5</string>

    <!-- Location -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label" >Location</string>
    <string name="pref_location_default" translatable="false" >Brantford</string>

    <string name="pref_coord_lat_key" translatable="false">coord_lat</string>
    <string name="pref_coord_lat_default" translatable="false">0.0</string>

    <string name="pref_coord_long_key" translatable="false">coord_long</string>
    <string name="pref_coord_long_default" translatable="false">0.0</string>



    <string name="pref_notification_key" translatable="false">notification</string>
    <string name="pref_notification_label" >Notifications</string>
    <string name="pref_notification_summary_on" >Enabled</string>
    <string name="pref_notification_summary_off" >Disabled</string>

    <!-- Last Notification (in milliseconds) -->
    <string name="pref_last_notification_key" translatable="false">lastnotification</string>



    <!-- When to update -->
    <string name="pref_update_wifi_key" translatable="false">updateOnWifi</string>
    <string name="pref_update_wifi_label" >Update weather on WiFi</string>
    <string name="pref_update_wifi_summary_on" >WiFi only</string>
    <string name="pref_update_wifi_summary_off" >Any network</string>


    <!-- Units -->
    <string name="pref_unit_key" translatable="false">units</string>
    <string name="pref_unit_default" translatable="false">@string/pref_unit_celcius_key</string>
    <string name="pref_unit_label" >Units</string>

    <string name="pref_unit_celcius_key" translatable="false">celcius</string>
    <string name="pref_unit_celcius_label" >Celcius</string>

    <string name="pref_unit_fahrenheit_key" translatable="false">fahrenheit</string>
    <string name="pref_unit_fahrenheit_label" >Fahrenheit</string>


    <string name="pref_language_label">Language</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_default" translatable="false">@string/pref_language_english_key</string>
    <string name="pref_language_english_label">English</string>
    <string name="pref_language_french_label">French</string>

    <string name="pref_language_english_key" translatable="false">en</string>
    <string name="pref_language_french_key" translatable="false">fr</string>
    <!-- - - - - - - -->
    <!-- Strings -->
    <!-- - - - - - - -->

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>

    <!-- - - - - - - - - - - - - -->
    <!-- Accessibility           -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>





    <!-- - - - - - - -->
    <!-- Formats     -->
    <!-- - - - - - - -->


    <string name="format_full_friendly_date" translatable="false">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>

    <string name="format_temperature" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Temperature format in Celsius -->
    <string name="format_temperature_celsius" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0C
    </string>

    <!-- Temperature format in Fahrenheit  -->
    <string name="format_temperature_fahrenheit" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0F
    </string>

    <string name="format_humidity" translatable="false">
        <xliff:g id="humidity">%1$d</xliff:g>%%
    </string>

    <string name="format_pressure" translatable="false">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <!-- Wind in kph  -->
    <string name="format_wind_kmh" translatable="false">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in mph  -->
    <string name="format_wind_mph" translatable="false">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_notification">
        <xliff:g id="condition">%1$s</xliff:g> -
        High: <xliff:g id="high">%2$s</xliff:g>
        Low: <xliff:g id="low">%3$s</xliff:g>
    </string>


    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
</resources>
